@@ -1,3 +1,7 @@
+2003-12-17  Jody Goldberg <jody@gnome.org>
+
+	* capplet-dir.c (find_icon) : Use gtk_icon_theme_get_default
+
 2003-12-16  Jody Goldberg <jody@gnome.org>
 
 	* capplet-dir.c (find_icon) : Use GtkIconTheme rather than
